@@ -1,3 +1,10 @@
+2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/renderer/xy/XYAreaRenderer.java
+	(drawItem): Simplified entity generation,
+	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
+	(drawItem): Likewise.
+
 2007-11-09  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/renderer/xy/XYDotRenderer.java
